Copy the incognito background tab text color from the regular tab text color.

This preserves the "theme both normal and incognito windows" behavior of
COLOR_BACKGROUND_TAB_TEXT, which was the only color available until I added
incognito and inactive variants last week.  It makes some themes look more like
their authors intended (e.g. Black Red Shards).  OTOH, it makes some themes
unreadable because the copied text color doesn't work in the current treatment
of incognito tabs.  I'm not sure which route is better, but this route seems to
at least err on the side of author intent, so...

Bug: 869395
Test: Install "Black Red Shards" theme, open an incognito window with multiple tabs, check that text is red on all tabs.
Change-Id: Idef3b07edd2b49b1acc440edaf8c31838350dd98
Reviewed-on: https://chromium-review.googlesource.com/1157867
Reviewed-by: Evan Stade <estade@chromium.org>
Commit-Queue: Peter Kasting <pkasting@chromium.org>
Cr-Commit-Position: refs/heads/master@{#579845}
Former-commit-id: 3e5002e927985502e6cef30b6cf9c6f3084a7044